--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -1,5 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+    ViewData["Title"] = "CreateAccount";
 }
+
+<h1>CreateAccount</h1>
+
+<p>We create an account here</p>
