--- a/FirstNationalBank/Views/Home/Index.cshtml
+++ b/FirstNationalBank/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div id="login">
         <input type="submit" value="Log In" id="login-form" onclick="openInputField()" />
         <div id="loginForm" style="display:none">
-            <form action="javascript:void(0);" method="POST" onsubmit="">
+            <form action="javascript:void(0);" method="POST" onsubmit="redirectToProfilePage()">
                 <label>Email: </label>
                 <input type="text" id="email"><br />
                 <label>Password: </label>
@@ -17,7 +17,7 @@
     </div>
     <br />
     <div id="createUser">
-        <input type="submit" value="Create User" id="create-btn" onclick="" />
+        <input type="submit" value="Create User" id="create-btn" onclick="redirectToCreateAccount()" />
     </div>
 </div>
 
