--- a/ForestNationalBank/Views/Index.html
+++ b/ForestNationalBank/Views/Index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Banking Log In</title>
 </head>
 <body>
+    <h2>Online Banking</h2>
     <div class="text-center">
         <div id="login">
             <input type="submit" value="Log In" id="login-form" onclick="openInputField()" />
@@ -24,6 +25,6 @@
         </div>
     </div>
 
-    <script src="~/js/index.js" asp-append-version="true"></script>
+    <script src="js/index.js" asp-append-version="true"></script>
 </body>
 </html>
