bank account create wire up

--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -21,8 +21,9 @@
         <input type="text" id="add-email" /><br />
         <label>Password: </label>
         <input type="text" id="add-password" /><br />
-        <input type="hidden" id="add-balance" value="0.00" />
-        <button type="submit" id="create-btn" onclick="test()">Create</button>
+        <label>Initial Balance: </label>
+        <input type="text" id="add-balance" /><br />
+        <button type="submit" id="create-btn" onclick="">Create</button>
     </form>
 </div>
 
