--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -9,11 +9,42 @@
 <label>ID: </label>
 <input type="text" id="add-id" />
 <br />
+<table>
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+    <tbody id="account"></tbody>
+</table>
 
 
 <script>
+    const uri = 'https://localhost:44330/api/BankAccounts';
     var url = document.URL;
-    var id = url.substring(url.lastIndexOf('/') + 1);
+    var myid = url.substring(url.lastIndexOf('/') + 1);
     const changeid = document.getElementById('add-id');
-    changeid.value = id;
+    changeid.value = myid;
+
+    const acctId = parseInt(myid);
+    getAccount();
+
+    function getAccount() {
+        fetch(uri)
+            .then(response => response.json())
+            .then(data => displayAccount(data))
+            .catch(error => console.error('Unable to get account.', error));
+    }
+
+    function displayAccount(data) {
+        const tBody = document.getElementById('account');
+        tBody.innerHTML = '';
+
+        let tr = tBody.insertRow();
+
+        let td1 = tr.insertCell(0);
+        let textNode1 = document.createTextNode(data.bankAccount.account);
+        td1.appendChild(textNode1);
+    }
+
 </script>
