login with email and password wire up redirecting to profile page

--- a/FirstNationalBank/Views/Home/Index.cshtml
+++ b/FirstNationalBank/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div id="login">
         <input type="submit" value="Log In" id="login-form" onclick="openInputField()" />
         <div id="loginForm" style="display:none">
-            <form action="javascript:void(0);" method="POST" onsubmit="redirectToProfilePage()">
+            <form action="javascript:void(0);" method="POST" onsubmit="getPerson()">
                 <label>Email: </label>
                 <input type="text" id="email"><br />
                 <label>Password: </label>
