--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -3,29 +3,72 @@
     ViewData["Title"] = "ProfilePage";
 }
 
-<h1>ProfilePage</h1>
+<h2>Welcome to your Account!</h2>
 
-<p>This is the profile page</p>
-<label>ID: </label>
-<input type="text" id="add-id" />
-<br />
+<style>
+    body {
+        font-family: "Lato", sans-serif;
+    }
 
-<div>
-    <label>User Account:</label>
-    <p id="add-account"></p>
+    .sidebar {
+        width: 230px;
+        position: fixed;
+        z-index: 1;
+        top: 60px;
+        left: 10px;
+        background: #f8f8f8;
+        overflow-x: hidden;
+        padding: 8px 0;
+    }
+
+    .sidebar a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 16px;
+        color: #2196F3;
+        display: block;
+    }
+
+    .header {
+        width: 100%;
+        padding: 10px 0;
+        text-align: right;
+        background: #f8f8f8;
+        display: block;
+    }
+</style>
+
+<div class="header">
+    <h4>User Account:</h4>
+    <a id="add-account"></a>
 </div>
-<div>
-    <p id="add-name"></p>
-    <p id="add-address"></p>
-    <p id="add-phone"></p>
-    <p id="add-email"></p>
+
+
+<div style="display: inline-block">
+    <h4>Balance:</h4>
+    <a id="add-balance"></a>
 </div>
 
-<div>
-    <label>Balance:</label>
-    <p id="add-balance"></p>
+<div class="sidebar">
+    <div>
+        <a id="add-name"></a>
+        <a id="add-address"></a>
+        <a id="add-phone"></a>
+        <a id="add-email"></a>
+    </div>
 </div>
 
+<div class="btn-toolbar">
+    <div class="btn-group mr-2">
+        <button type="submit" id="deposit">Deposit</button>
+    </div>
+    <div class="btn-group mr-2">
+        <button type="submit" id="withdrawal">Withdrawal</button>
+    </div>
+    <div class="btn-group mr-2">
+        <button type="submit" id="transactions">Transactions</button>
+    </div>
+</div>
 
 <table>
     <tr>
@@ -44,9 +87,6 @@
     var url = document.URL;
     var myid = url.substring(url.lastIndexOf('/') + 1);
     const acctId = parseInt(myid);
-
-    const changeid = document.getElementById('add-id');
-    changeid.value = myid;
 
     const uri = ('https://localhost:44330/api/BankAccounts/' + myid);
 
