--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -2,29 +2,37 @@
 @{
     ViewData["Title"] = "CreateAccount";
 }
+<div style="max-width:20rem;
+            margin: 0 auto;">
 
-<h1>CreateAccount</h1>
+    <h1>CreateAccount</h1>
 
-<p>We create an account here</p>
+    <p>We create an account here</p>
 
-<div id="inputForm">
-    <form action="javascript:void(0);" method="POST" onsubmit="addAccount()">
-        <label>Name: </label>
-        <input type="text" id="add-name" /><br />
-        <label>Address: </label>
-        <input type="text" id="add-address" /><br />
-        <label>Bank Account: </label>
-        <input type="text" id="add-account" /><br />
-        <label>Phone: </label>
-        <input type="text" id="add-phone" /><br />
-        <label>Email: </label>
-        <input type="text" id="add-email" /><br />
-        <label>Password: </label>
-        <input type="text" id="add-password" /><br />
-        <label>Initial Balance: </label>
-        <input type="text" id="add-balance" /><br />
-        <button type="submit" id="create-btn" onclick="">Create</button>
-    </form>
+    <div id="inputForm">
+        <form action="javascript:void(0);"
+              method="POST"
+              onsubmit="addAccount()"
+              style="display: flex; flex-direction: column;">
+
+            <label>Name: </label>
+            <input type="text" id="add-name"/><br/>
+            <label>Address: </label>
+            <input type="text" id="add-address"/><br/>
+            <label>Bank Account: </label>
+            <input type="text" id="add-account"/><br/>
+            <label>Phone: </label>
+            <input type="text" id="add-phone"/><br/>
+            <label>Email: </label>
+            <input type="text" id="add-email"/><br/>
+            <label>Password: </label>
+            <input type="text" id="add-password"/><br/>
+            <label>Initial Balance: </label>
+            <input type="text" id="add-balance"/><br/>
+            <button type="submit" id="create-btn" onclick="">Create</button>
+        </form>
+    </div>
 </div>
+
 
 <script src="~/js/create.js" asp-append-version="true"></script>
