--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -15,20 +15,35 @@
               onsubmit="addAccount()"
               style="display: flex; flex-direction: column;">
 
-            <label>Name: </label>
-            <input type="text" id="add-name"/><br/>
+            <label>First name: </label>
+            <input type="text" id="add-first-name" /><br />
+            <label>Last name: </label>
+            <input type="text" id="add-last-name" /><br />
             <label>Address: </label>
-            <input type="text" id="add-address"/><br/>
-            <label>Bank Account: </label>
-            <input type="text" id="add-account"/><br/>
+            <input type="text" id="add-address" /><br />
+            <label>City: </label>
+            <input type="text" id="add-city" /><br />
+            <label>State: </label>
+            <input type="text" id="add-state" /><br />
+            <label>ZIP: </label>
+            <input type="text" id="add-zip" /><br />
+            <label>Mother's maiden name</label>
+            <input type="text" id="add-mmn" /><br />
             <label>Phone: </label>
-            <input type="text" id="add-phone"/><br/>
+            <input type="text" id="add-phone" /><br />
             <label>Email: </label>
-            <input type="text" id="add-email"/><br/>
+            <input type="text" id="add-email" /><br />
             <label>Password: </label>
-            <input type="text" id="add-password"/><br/>
+            <input type="text" id="add-password" /><br />
+            <label>Account type: </label>
+            <select name="acct-type" id="add-acct-type">
+                <option value="checking">Checking</option>
+                <option value="savings">Savings</option>
+            </select><br />
+            <label>Bank Account: </label>
+            <input type="text" id="add-account" /><br />
             <label>Initial Balance: </label>
-            <input type="text" id="add-balance"/><br/>
+            <input type="text" id="add-balance" /><br />
             <button type="submit" id="create-btn" onclick="">Create</button>
         </form>
     </div>
