--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -3,58 +3,7 @@
     ViewData["Title"] = "ProfilePage";
 }
 
-
-
-<style>
-    body {
-        font-family: "Lato", sans-serif;
-    }
-
-    .sidebar {
-        width: 200px;
-        position: fixed;
-        z-index: 1;
-        top: 100px;
-        left: 10px;
-        background: #f8f8f8;
-        overflow-x: hidden;
-        padding: 8px 0;
-    }
-
-        .sidebar a {
-            padding: 6px 8px 6px 16px;
-            text-decoration: none;
-            font-size: 16px;
-            color: #2196F3;
-            display: block;
-        }
-
-    .header {
-        width: 100%;
-        padding: 10px 0;
-        text-align: right;
-        background: #f8f8f8;
-        display: block;
-    }
-    
-    .main {
-        margin-left: 200px;
-        width: 100%;
-        padding: 0px 10px;
-    }
-
-    table {
-        table-layout: auto;
-        width: 80%;
-    }
-
-    th,
-    td {
-        padding: 10px;
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
+<link rel="stylesheet" href="~/css/profile.css">
 
 <div class="sidebar">
     <div>
@@ -77,18 +26,19 @@
 
     <div class="btn-toolbar">
         <div class="btn-group mr-2">
-            <button type="submit" id="deposit" onclick="openTransactionForm()">Deposit</button>
+            <button type="submit" id="deposit" onclick="openDepositTransactionForm()">Deposit</button>
         </div>
         <div class="btn-group mr-2">
-            <button type="submit" id="withdrawal" onclick="">Withdrawal</button>
+            <button type="submit" id="withdrawal" onclick="openWithdrawalTransactionForm()">Withdrawal</button>
         </div>
         <div class="btn-group mr-2">
             <button type="submit" id="transactions" onclick="getTransactions()">Transactions</button>
         </div>
     </div>
     <br />
-    <div id="transactionForm" style="display:none">
-        <form action="javascript:void(0);" method="POST" onsubmit="addTransaction()">
+    <div id="transactionForm" style="display:none; max-width:220px;">
+        <form action="javascript:void(0);" method="POST" onsubmit="addTransaction()" style="display:flex; flex-direction:column;">
+            <input type="hidden" value="credit" id="add-type" />
             <label>Amount: </label>
             <input type="text" id="amount"><br />
             <label>Notes: </label>
@@ -111,120 +61,7 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    const nope = 'https://localhost:44330/api/BankAccounts';
-    let transaction = [];
-
-    var url = document.URL;
-    var myid = url.substring(url.lastIndexOf('/') + 1);
-    const acctId = parseInt(myid);
-
-    const uri = ('https://localhost:44330/api/BankAccounts/' + myid);
-    const uri2 = ('https://localhost:44330/api/Transactions/');
-
-    function getAccount() {
-        fetch(uri)
-            .then(response => response.json())
-            .then(data => displayAccount(data))
-            .catch(error => console.error('Unable to get account.', error));
-    }
-
-    function getTransactions() {
-        fetch(uri2 + myid)
-            .then(response => response.json())
-            .then(data => displayTransactions(data))
-            .catch(error => console.error('Unable to get transactions.', error))
-    }
-
-    function addTransaction() {
-        const amount = document.getElementById('amount');
-        const notes = document.getElementById('notes');
-
-        const trans = {
-            amount: parseFloat(amount.value),
-            notes: notes.value,
-            acct_Id: acctId
-        };
-
-        fetch(uri2, {
-            method: 'POST',
-            headers: {
-                'Accept': 'application/json',
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(trans)
-        })
-            .then(response => response.json())
-            .then(() => {
-                closeTransactionForm();
-                getTransactions();
-            })
-            .catch(error => console.error('Unable to add transaction', error));
-    }
-
-    function displayAccount(data) {
-        const account = document.getElementById('add-account');
-        const name = document.getElementById('add-name');
-        const address = document.getElementById('add-address');
-        const phone = document.getElementById('add-phone');
-        const email = document.getElementById('add-email');
-        const balance = document.getElementById('add-balance');
-
-        account.innerHTML = data.bankAccount.number;
-        name.innerHTML = data.person.name;
-        address.innerHTML = data.person.address;
-        phone.innerHTML = data.person.phone;
-        email.innerHTML = data.person.email;
-        balance.innerHTML = data.bankAccount.balance;
-    }
-
-    function displayTransactions(data) {
-        document.getElementById('table').style.display = 'block';
-        document.getElementById('transactions').onclick = function () { hideTransactions() };
-
-        const tBody = document.getElementById('transaction');
-
-        data.forEach(item => {
-            let tr = tBody.insertRow();
-
-            let td1 = tr.insertCell(0);
-            let textNode1 = document.createTextNode(item.date.slice(0, 10));
-            td1.appendChild(textNode1);
-
-            let td2 = tr.insertCell(1);
-            let textNode2 = document.createTextNode("Debit/Credit");
-            td2.appendChild(textNode2);
-
-            let td3 = tr.insertCell(2);
-            let textNode3 = document.createTextNode(parseFloat(item.amount));
-            td3.appendChild(textNode3);
-
-            let td4 = tr.insertCell(3);
-            let textNode4 = document.createTextNode(item.notes);
-            td4.appendChild(textNode4);
-        });
-
-        transaction = data;
-    }
-
-    function openTransactionForm() {
-        document.getElementById('transactionForm').style.display = 'block';
-    }
-
-    function closeTransactionForm() {
-        document.getElementById('transactionForm').style.display = 'none';
-    }
-
-    function hideTransactions() {
-        const tBody = document.getElementById('transaction');
-        tBody.innerHTML = '';
-
-        document.getElementById('table').style.display = 'none';
-        document.getElementById('transactions').onclick = function () { getTransactions() };
-    }
-
-</script>
-
+<script src="~/js/profile.js" asp-append-version="true"></script>
 <script type="text/javascript">
     getAccount();
 </script>
