--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -36,7 +36,7 @@
             <label>Password: </label>
             <input type="text" id="add-password" /><br />
             <label>Account type: </label>
-            <select name="acct-type" id="add-acct-type">
+            <select name="acct-type" id="add-type">
                 <option value="checking">Checking</option>
                 <option value="savings">Savings</option>
             </select><br />
