transaction controller wire up in progress

--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -51,7 +51,7 @@
     <br />
     <div id="transactionForm" style="display:none; max-width:220px;">
         <form action="javascript:void(0);" method="POST" onsubmit="addTransaction()" style="display:flex; flex-direction:column;">
-            <input type="hidden" value="" id="add-type" />
+            <input type="hidden" id="type" />
             <label>Amount: </label>
             <input type="text" id="amount"><br />
             <label>Notes: </label>
