--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -27,10 +27,10 @@
     </div>
 </div>
 
-<div class="main">
+<div class="main-profile">
     <h2>Welcome to your Account!</h2>
     <div class="header">
-        <h4><a id="acct-type"></a> Account Number: <a id="add-account"></a></h4>
+        <h4><a id="acct-type"></a> account: <a id="add-account"></a></h4>
     </div>
 
     <div style="display: inline-block">
