--- a/FirstNationalBank/Views/Home/Index.cshtml
+++ b/FirstNationalBank/Views/Home/Index.cshtml
@@ -2,23 +2,38 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center" style="max-width:15rem; margin: 0 auto;">
-    <div id="login">
-        <input type="submit" value="Log In" id="login-form" onclick="openInputField()" />
-        <div id="loginForm" style="display:none">
-            <form action="javascript:void(0);" method="POST" onsubmit="getPerson()" style="display: flex; flex-direction: column;">
-                <label>Email: </label>
-                <input type="text" id="email"><br />
-                <label>Password: </label>
-                <input type="text" id="password"><br />
-                <input type="submit" id="login-btn" value="Log In">
-            </form>
+<link rel="stylesheet" href="~/css/index.css">
+
+<div class="videoDIV" id="videoDiv">
+    <video autoplay muted loop id="indexPageVideo"
+           style="width: 100%;
+           height: auto">
+        <source src="~/css/pexels-mikhail-nilov-6942709.mp4" type="video/mp4" />
+    </video>
+
+    <div class="indexBody" id="indexBody">
+        <div id="login">
+            <input type="submit" class="main-login-create-btn" value="Log In" id="login-form-btn" onclick="openInputField()"/>
+            <div id="loginForm" style="display:none; max-width: 15rem; text-align: center; margin: auto;">
+                <form action="javascript:void(0);" method="POST" onsubmit="getPerson()" style="display: flex; flex-direction: column;">
+                    <label style="color: white;">Email: </label>
+                    <input type="text" id="email" style="
+                        background-color: rgba(255, 255, 255, 0.5)"><br />
+                    <label style="color: white;">Password: </label>
+                    <input type="text" id="password" style="
+                        background-color: rgba(255, 255, 255, 0.5)"><br />
+                    <input type="submit" class="login-btn" id="login-btn" value="Log In"/>
+                </form>
+            </div>
+        </div>
+        <br />
+        <div id="createUser">
+            <input type="submit" class="main-login-create-btn" value="Create User" id="create-btn" onclick="redirectToCreateAccount()"/>
         </div>
     </div>
-    <br />
-    <div id="createUser">
-        <input type="submit" value="Create User" id="create-btn" onclick="redirectToCreateAccount()" />
-    </div>
 </div>
+
+
+
 
 <script src="~/js/index.js" asp-append-version="true"></script>
