--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -2,48 +2,53 @@
 @{
     ViewData["Title"] = "CreateAccount";
 }
-<div style="max-width:20rem;
+
+<div style="background-image: url('https://image.shutterstock.com/shutterstock/photos/748798912/display_1500/stock-photo-business-office-building-lobby-blur-background-of-bank-reception-hall-customer-or-patient-counter-748798912.jpg');
+       background-repeat: no-repeat;
+       background-size: cover;">
+    <div style="max-width:20rem;
             margin: 0 auto;">
 
-    <h1>Create Account</h1>
-    <br />
-    <div id="inputForm">
-        <form action="javascript:void(0);"
-              method="POST"
-              onsubmit="addAccount()"
-              style="display: flex; flex-direction: column;">
+        <h1>Create Account</h1>
+        <br />
+        <div id="inputForm">
+            <form action="javascript:void(0);"
+                  method="POST"
+                  onsubmit="addAccount()"
+                  style="display: flex; flex-direction: column;">
 
-            <label>First name: </label>
-            <input type="text" id="add-first-name" /><br />
-            <label>Last name: </label>
-            <input type="text" id="add-last-name" /><br />
-            <label>Address: </label>
-            <input type="text" id="add-address" /><br />
-            <label>City: </label>
-            <input type="text" id="add-city" /><br />
-            <label>State: </label>
-            <input type="text" id="add-state" /><br />
-            <label>ZIP: </label>
-            <input type="text" id="add-zip" /><br />
-            <label>Mother's maiden name</label>
-            <input type="text" id="add-mmn" /><br />
-            <label>Phone: </label>
-            <input type="text" id="add-phone" /><br />
-            <label>Email: </label>
-            <input type="text" id="add-email" /><br />
-            <label>Password: </label>
-            <input type="text" id="add-password" /><br />
-            <label>Account type: </label>
-            <select name="acct-type" id="add-type">
-                <option value="checking">Checking</option>
-                <option value="savings">Savings</option>
-            </select><br />
-            <label>Bank Account: </label>
-            <input type="text" id="add-account" /><br />
-            <label>Initial Balance: </label>
-            <input type="text" id="add-balance" /><br />
-            <button type="submit" id="create-btn" onclick="">Create</button>
-        </form>
+                <label>First name: </label>
+                <input type="text" id="add-first-name" /><br />
+                <label>Last name: </label>
+                <input type="text" id="add-last-name" /><br />
+                <label>Address: </label>
+                <input type="text" id="add-address" /><br />
+                <label>City: </label>
+                <input type="text" id="add-city" /><br />
+                <label>State: </label>
+                <input type="text" id="add-state" /><br />
+                <label>ZIP: </label>
+                <input type="text" id="add-zip" /><br />
+                <label>Mother's maiden name</label>
+                <input type="text" id="add-mmn" /><br />
+                <label>Phone: </label>
+                <input type="text" id="add-phone" /><br />
+                <label>Email: </label>
+                <input type="text" id="add-email" /><br />
+                <label>Password: </label>
+                <input type="text" id="add-password" /><br />
+                <label>Account type: </label>
+                <select name="acct-type" id="add-type">
+                    <option value="checking">Checking</option>
+                    <option value="savings">Savings</option>
+                </select><br />
+                <label>Bank Account: </label>
+                <input type="text" id="add-account" /><br />
+                <label>Initial Balance: </label>
+                <input type="text" id="add-balance" /><br />
+                <button type="submit" id="create-btn" onclick="">Create</button>
+            </form>
+        </div>
     </div>
 </div>
 
