design edit page to edit account info

--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -30,7 +30,8 @@
 <div class="main-profile">
     <h2>Welcome to your Account!</h2>
     <div class="header">
-        <h4><a id="acct-type"></a> account: <a id="add-account"></a></h4>
+        <h4><a id="acct-type"></a> account: <a id="add-account"></a></h4><br />
+        <button type="submit" id="account-settings" onclick="redirectToEditAccount()">Account settings</button>
     </div>
 
     <div style="display: inline-block">
